--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" defer></script>
 </head>
 
-<body>
+<body onload="demarrerLaMontre()">
     <main class="main">
         <div class="clockbox">
             <svg id="clock" xmlns="http://www.w3.org/2000/svg" width="600" height="600" viewBox="0 0 600 600">
@@ -32,7 +32,10 @@
                     <circle class="sizing-box" cx="300" cy="300" r="253.9" />
                 </g>
             </svg>
-        </div><!-- .clockbox -->
+        </div>
+        <!-- .clockbox -->
+
+
     </main>
 
 </body>
